src/video.h

    typedef cv::KalmanFilter *KalmanFilter;
typedef void *KalmanFilter;
    KalmanFilter KalmanFilter_New(int dynamParams, int measureParams);
    void KalmanFilter_Init(KalmanFilter kf, int dynamParams, int measureParams);
    void KalmanFilter_InitWithParams(KalmanFilter kf, int dynamParams, int measureParams, int controlParams, int type);
    Mat KalmanFilter_Predict(KalmanFilter kf);
    Mat KalmanFilter_PredictWithParams(KalmanFilter kf, Mat control);
    Mat KalmanFilter_GetTransitionMatrix(KalmanFilter kf);
    void KalmanFilter_SetControlMatrix(KalmanFilter kf, Mat controlMatrix);
    void KalmanFilter_SetErrorCovPre(KalmanFilter kf, Mat errorCovPre);
    void KalmanFilter_SetGain(KalmanFilter kf, Mat gain);
    void KalmanFilter_SetErrorCovPost(KalmanFilter kf, Mat errorCovPost);