packages/dartcv/lib/src/g/video.g.dart


  ffi.Pointer<CvStatus> KalmanFilter_GetTransitionMatrix(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTransitionMatrix(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTransitionMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              ffi.Pointer<Mat>)>>('KalmanFilter_GetTransitionMatrix');
  late final _KalmanFilter_GetTransitionMatrix =
      _KalmanFilter_GetTransitionMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTransitionMatrix_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTransitionMatrix_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTransitionMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetTransitionMatrix_Async');
  late final _KalmanFilter_GetTransitionMatrix_Async =
      _KalmanFilter_GetTransitionMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_Init(
    KalmanFilter self,
    int dynamParams,
    int measureParams,
  ) {
    return _KalmanFilter_Init(
      self,
      dynamParams,
      measureParams,
    );
  }

  late final _KalmanFilter_InitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Int, ffi.Int)>>('KalmanFilter_Init');
  late final _KalmanFilter_Init = _KalmanFilter_InitPtr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, int, int)>();

  ffi.Pointer<CvStatus> KalmanFilter_InitWithParams(
    KalmanFilter self,
    int dynamParams,
    int measureParams,
    int controlParams,
    int type,
  ) {
    return _KalmanFilter_InitWithParams(
      self,
      dynamParams,
      measureParams,
      controlParams,
      type,
    );
  }

  late final _KalmanFilter_InitWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int)>>('KalmanFilter_InitWithParams');
  late final _KalmanFilter_InitWithParams =
      _KalmanFilter_InitWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, int, int, int, int)>();

  ffi.Pointer<CvStatus> KalmanFilter_InitWithParams_Async(
    KalmanFilter self,
    int dynamParams,
    int measureParams,
    int controlParams,
    int type,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_InitWithParams_Async(
      self,
      dynamParams,
      measureParams,
      controlParams,
      type,
      callback,
    );
  }

  late final _KalmanFilter_InitWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              imp1.CvCallback_0)>>('KalmanFilter_InitWithParams_Async');
  late final _KalmanFilter_InitWithParams_Async =
      _KalmanFilter_InitWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, int, int, int, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_Init_Async(
    KalmanFilter self,
    int dynamParams,
    int measureParams,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_Init_Async(
      self,
      dynamParams,
      measureParams,
      callback,
    );
  }

  late final _KalmanFilter_Init_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Int, ffi.Int,
              imp1.CvCallback_0)>>('KalmanFilter_Init_Async');
  late final _KalmanFilter_Init_Async = _KalmanFilter_Init_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          KalmanFilter, int, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_New(
    int dynamParams,
    int measureParams,
    int controlParams,
    int type,
    ffi.Pointer<KalmanFilter> rval,
  ) {
    return _KalmanFilter_New(
      dynamParams,
      measureParams,
      controlParams,
      type,
      rval,
    );
  }

  late final _KalmanFilter_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<KalmanFilter>)>>('KalmanFilter_New');
  late final _KalmanFilter_New = _KalmanFilter_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, int, ffi.Pointer<KalmanFilter>)>();

  ffi.Pointer<CvStatus> KalmanFilter_New_Async(
    int dynamParams,
    int measureParams,
    int controlParams,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_New_Async(
      dynamParams,
      measureParams,
      controlParams,
      type,
      callback,
    );
  }

  late final _KalmanFilter_New_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('KalmanFilter_New_Async');
  late final _KalmanFilter_New_Async = _KalmanFilter_New_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_Predict(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_Predict(
      self,
      rval,
    );
  }

  late final _KalmanFilter_PredictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_Predict');
  late final _KalmanFilter_Predict = _KalmanFilter_PredictPtr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_PredictWithParams(
    KalmanFilter self,
    Mat control,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_PredictWithParams(
      self,
      control,
      rval,
    );
  }

  late final _KalmanFilter_PredictWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              ffi.Pointer<Mat>)>>('KalmanFilter_PredictWithParams');
  late final _KalmanFilter_PredictWithParams =
      _KalmanFilter_PredictWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_PredictWithParams_Async(
    KalmanFilter self,
    Mat control,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_PredictWithParams_Async(
      self,
      control,
      callback,
    );
  }

  late final _KalmanFilter_PredictWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_1)>>('KalmanFilter_PredictWithParams_Async');
  late final _KalmanFilter_PredictWithParams_Async =
      _KalmanFilter_PredictWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_Predict_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_Predict_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_Predict_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_Predict_Async');
  late final _KalmanFilter_Predict_Async =
      _KalmanFilter_Predict_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetControlMatrix(
    KalmanFilter self,
    Mat controlMatrix,
  ) {
    return _KalmanFilter_SetControlMatrix(
      self,
      controlMatrix,
    );
  }

  late final _KalmanFilter_SetControlMatrixPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetControlMatrix');
  late final _KalmanFilter_SetControlMatrix = _KalmanFilter_SetControlMatrixPtr
      .asFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetControlMatrix_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetControlMatrix_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetControlMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetControlMatrix_Async');
  late final _KalmanFilter_SetControlMatrix_Async =
      _KalmanFilter_SetControlMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetErrorCovPost(
    KalmanFilter self,
    Mat errorCovPost,
  ) {
    return _KalmanFilter_SetErrorCovPost(
      self,
      errorCovPost,
    );
  }

  late final _KalmanFilter_SetErrorCovPostPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetErrorCovPost');
  late final _KalmanFilter_SetErrorCovPost = _KalmanFilter_SetErrorCovPostPtr
      .asFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetErrorCovPost_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetErrorCovPost_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetErrorCovPost_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetErrorCovPost_Async');
  late final _KalmanFilter_SetErrorCovPost_Async =
      _KalmanFilter_SetErrorCovPost_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetErrorCovPre(
    KalmanFilter self,
    Mat errorCovPre,
  ) {
    return _KalmanFilter_SetErrorCovPre(
      self,
      errorCovPre,
    );
  }

  late final _KalmanFilter_SetErrorCovPrePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetErrorCovPre');
  late final _KalmanFilter_SetErrorCovPre = _KalmanFilter_SetErrorCovPrePtr
      .asFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetErrorCovPre_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetErrorCovPre_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetErrorCovPre_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetErrorCovPre_Async');
  late final _KalmanFilter_SetErrorCovPre_Async =
      _KalmanFilter_SetErrorCovPre_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetGain(
    KalmanFilter self,
    Mat gain,
  ) {
    return _KalmanFilter_SetGain(
      self,
      gain,
    );
  }

  late final _KalmanFilter_SetGainPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetGain');
  late final _KalmanFilter_SetGain = _KalmanFilter_SetGainPtr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();
